# UnityVisualizer

./: CMakeLists.txt  example.json  readme.md  requirements.txt  setup.py  simulator.py
Assets/Editor/: UIMenu.cs
Assets/Resources/Instances/den312d/: den312d_agents100_0.scen  den312d_agents20_0.scen
Assets/Resources/Instances/random-32-32-10/: random-32-32-10_agents100_0.scen
Assets/Resources/Maps/: 30x30.map  6x6.map
Assets/Resources/PathFile/: den312_demo.txt  random-32-32-10_agents100_demo.txt
Assets/Resources/Prefabs/: HolonomicRobot.prefab  ItemPrefab.prefab  KivaRobot.prefab
Assets/Scenes/: KivaSim.unity  MapManager.unity  Menu.unity  Simulator.unity
Assets/Scripts/: Actions.cs  Agents.cs  CameraControl.cs  Conflict.cs  Controller.cs  Graph.cs  HolonomicAgent.cs  Instance.cs  KivaPlan.cs  KivaRobot.cs  LoadMap.cs  Map.cs  Paths.cs  Robots.cs  Simulate.cs
Assets/Scripts/MapScripts/: ConsoleItem.cs  ConsoleList.cs  MapItem.cs  MapList.cs  PathItem.cs  PathList.cs  ScenControl.cs
Assets/Scripts/UI/: PalyAndStop.cs  PlayAndStop.cs  ShowGoal.cs  UseLabel.cs  console.cs  playerSlider.cs
Assets/Texture/: floor.asset  forest.asset  highlight.asset  map_mapf.prefab  map_texture.renderTexture  obstacle.asset
Assets/kits/exp/: 6x6demo.txt  test_actual.txt
Assets/kits/maps/: 6x6task.txt
src/: Simulator.cpp  Simulator.hpp  actions.hpp  utils.cpp  utils.hpp  wrapper.cpp
